--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
         
         // Buton tıklandığında Axios ile istek yapıyoruz
         document.getElementById('requestData').addEventListener('click', function() {
-            axios.get('/api/someEndpoint', {
+            axios.get('https://7536-78-177-177-231.ngrok-free.app/user/me', {
                 params: {
                     token: token
                 }
