Refactor home.ejs to display user information in a structured format

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Welcome to the Home Page</h1>
-    <p>response: <%= response %></p>
+    <h2>User Information</h2>
+    <p><strong>Email:</strong> <%= response.email %></p>
+    <p><strong>Role:</strong> <%= response.role %></p>
 
 </body>
 </html>
