--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,27 +26,16 @@
         // Buton tıklama olayını dinleme
         document.getElementById('twitterButton').addEventListener('click', function () {
             const token = "<%= token %>";  // Backend'den gelen token'ı kullan
-
-            // Backend'e Twitter ekleme isteği gönderen fonksiyonu çağır
-            addTwitterAccount(token);
+            axios.post('/twitter/add', {}, {
+                headers: {
+                    'Authorization': `Bearer ${token}`  // Token'ı başlık olarak ekle
+                }
+            }).then(response => {
+                console.log(response.data);
+            }).catch(error => {
+                console.error(error);
+            });
         });
-
-        // Twitter hesabı ekleme fonksiyonu
-        function addTwitterAccount(token) {
-            console.log('Token:', token);
-            // Axios ile POST isteği
-            axios.post('https://7536-78-177-177-231.ngrok-free.app/twitter/authorizeUrl', {
-                token: token
-            })
-                .then(function (response) {
-                    // Başarılı yanıt geldiğinde Twitter yetkilendirme URL'sine yönlendir
-                    window.open(response.data.twitterAuthorizeUrl, '_blank');  // Yeni pencerede aç
-                })
-                .catch(function (error) {
-                    alert('Twitter hesabı eklenirken bir hata oluştu.');
-                    console.error('Error:', error.response ? error.response.data : error.message);
-                });
-        }
     </script>
 </body>
 
