Refactor axios request URL in home.ejs and update pageController.js to use res.json for redirect after successful GET request

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,6 +32,8 @@
                 }
             }).then(response => {
                 console.log(response.data);
+                const redirectUrl = response.data.redirectUrl; // Yönlendirme URL'sini al
+                window.location.href = redirectUrl
             }).catch(error => {
                 console.error(error);
             });
