Refactor axios request URL in home.ejs and update pageController.js to log the redirect URL before performing the redirect

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,8 @@
             }).then(response => {
                 console.log(response.data);
                 const redirectUrl = response.data.redirectUrl; // Yönlendirme URL'sini al
-                window.location.href = redirectUrl
+                console.log(redirectUrl);
+                window.location.href = redirectUrl;  // Yönlendirme yap
             }).catch(error => {
                 console.error(error);
             });
