--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,29 +15,33 @@
     <h1>Welcome to the Home Page</h1>
     <h2>User Information</h2>
     <p><strong>Email:</strong>
-        <%= response.email %>
+        <%= typeof response !== 'undefined' ? response.email : 'N/A' %>
     </p>
     <p><strong>Role:</strong>
-        <%= response.role %>
+        <%= typeof response !== 'undefined' ? response.role : 'N/A' %>
     </p>
     <button id="twitterButton">Twitter Hesabı Ekle</button>
-
+    
     <script>
         // Buton tıklama olayını dinleme
         document.getElementById('twitterButton').addEventListener('click', function () {
-            const token = "<%= token %>";  // Backend'den gelen token'ı kullan
-            axios.post('/twitter/add', {}, {
-                headers: {
-                    'Authorization': `Bearer ${token}`  // Token'ı başlık olarak ekle
-                }
-            }).then(response => {
-                console.log(response.data);
-                const redirectUrl = response.data.redirectUrl; // Yönlendirme URL'sini al
-                console.log(redirectUrl);
-                window.location.href = redirectUrl;  // Yönlendirme yap
-            }).catch(error => {
-                console.error(error);
-            });
+            const token = "<%= typeof token !== 'undefined' ? token : '' %>";  // Backend'den gelen token'ı kullan
+            if (token) {
+                axios.post('/twitter/add', {}, {
+                    headers: {
+                        'Authorization': `Bearer ${token}`  // Token'ı başlık olarak ekle
+                    }
+                }).then(response => {
+                    console.log(response);
+                    const redirectUrl = response.data.redirectUrl; // Yönlendirme URL'sini al
+                    // console.log(redirectUrl);
+                    window.location.href = redirectUrl;  // Yönlendirme yap
+                }).catch(error => {
+                    console.error(error);
+                });
+            } else {
+                console.error('Token is not defined');
+            }
         });
     </script>
 </body>
