--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -72,13 +72,104 @@
         }
 
         function loginWithTwitter() {
-            // Twitter login logic here
+            axios.get('/home/twitter/login', {})
+            .then(response => {
+                console.log(response);
+                const redirectUrl = response.data;
+                window.location.href=redirectUrl
+            }).catch(error => {
+                console.error(error);
+                showError("Bir hata oluştu. Lütfen tekrar deneyin.");
+            });
             alert("Twitter ile giriş yapılıyor...");
         }
 
-        function loginWithMetaMask() {
-            // MetaMask login logic here
-            alert("MetaMask ile giriş yapılıyor...");
+
+        async function loginWithMetaMask() {
+            if (window.ethereum) {
+                try {
+                    const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    console.log("Kullanıcı MetaMask isteğini kabul etti:", accounts);
+                    const userAccount = accounts[0];
+                    const response = await axios.post('/metamask/nonce', { userAccount }, {
+                    });
+                    const nonce = response.data.signedMessage;
+                    const publicKey = response.data.publicKey;
+
+                    const msgParams = JSON.stringify({
+                        domain: {
+                            chainId: 1,
+                            name: 'legit',
+                            verifyingContract: '0xCcCCccccCCCCcCCCCCCcCcCccCcCCCcCcccccccC',
+                            version: '1',
+                        },
+                        message: {
+                            Mesaj: `
+Hoş Geldiniz!
+Cüzdanınızı Midle ile bağlamak için 'İmzala' butonuna tıklayın.
+Bu istek herhangi bir blockchain işlemini tetiklemez veya gaz ücreti talep etmez.
+
+Cüzdan adresi:
+${userAccount}
+
+Nonce:
+${nonce}
+`,
+                            from: {
+                                name: "Legit",
+                                wallets: [userAccount],
+                            },
+                        },
+                        primaryType: 'Mail',
+                        types: {
+                            EIP712Domain: [
+                                { name: 'name', type: 'string' },
+                                { name: 'version', type: 'string' },
+                                { name: 'chainId', type: 'uint256' },
+                                { name: 'verifyingContract', type: 'address' },
+                            ],
+                            Mail: [
+                                { name: 'Mesaj', type: 'string' },
+                                { name: 'from', type: 'Person' },
+                            ],
+                            Person: [
+                                { name: "name", type: "string" },
+                                { name: "wallets", type: "address[]" },
+                            ],
+                        },
+                    });
+                    const signature = await window.ethereum.request({
+                        method: 'eth_signTypedData_v4',
+                        params: [userAccount, msgParams],
+                    });
+
+                    axios.post('/metamask/login', {
+                        nonce: nonce,
+                        walletAddress: userAccount,
+                        publicKey: publicKey
+                    }).then(response => {
+                        console.log("Başarılı:", response.data);
+                        window.location.href = '/home?token=' + encodeURIComponent(response.data.replace(/"/g, ''));
+                    }).catch(error => {
+                        if (error.response) {
+                            // Server responded with a status other than 2xx
+                            console.error("Hata:", error.response.data);
+                            console.error("Durum Kodu:", error.response.status);
+                        } else if (error.request) {
+                            // Request was made but no response received
+                            console.error("Sunucuya istek yapıldı, ancak yanıt alınamadı:", error.request);
+                        } else {
+                            // Something happened in setting up the request
+                            console.error("Hata:", error.message);
+                        }
+                    });
+                } catch (error) {
+                    console.error("Kullanıcı MetaMask isteğini reddetti:", error);
+                    showError("MetaMask isteği reddedildi.");
+                }
+            } else {
+                alert("Lütfen MetaMask'i kurun.");
+            }
         }
     </script>
 </body>
