Refactor axios request URLs to use updated ngrok URLs

--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -23,7 +23,7 @@
 
             if (tgAuthResult) {
                 // Sunucuya POST isteği gönder
-                fetch(`https://ae87-78-177-177-231.ngrok-free.app/telegram/connect`, {
+                fetch(`https://6d51-78-177-177-231.ngrok-free.app/telegram/connect`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
