--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -74,16 +74,14 @@
         function loginWithTwitter() {
             axios.get('/home/twitter/login', {})
             .then(response => {
-                console.log(response);
-                const redirectUrl = response.data;
-                window.location.href=redirectUrl
+                const redirectUrl = response.data.redirectUrl;
+                window.location.href=redirectUrl;
             }).catch(error => {
                 console.error(error);
                 showError("Bir hata oluştu. Lütfen tekrar deneyin.");
             });
             alert("Twitter ile giriş yapılıyor...");
         }
-
 
         async function loginWithMetaMask() {
             if (window.ethereum) {
